[package]
name = "lwt_ng"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
eframe = { version = "0.22.0", features = ["persistence"] }
serde = { version = "1.0.188", features = ["derive"] }
sqlx = { version = "0.7.1", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
